#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([cache], [1.0], [])
AC_CONFIG_SRCDIR([main.c])
AM_INIT_AUTOMAKE

# Checks for programs.
AC_PROG_CC
CFLAGS="$CFLAGS -Wall"
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
